// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListItem /> when the post is mine renders 1`] = `
<div>
  <li
    class="flex list-none flex-col border-0 border-solid py-6 last:border-b-0"
  >
    <p
      class="break-words border-0 border-l-2 border-solid border-l-light-primary pl-4 dark:border-l-dark-primary"
    >
      post
    </p>
    <div
      class="flex items-center gap-4 self-end"
    >
      <div
        class="flex h-5 gap-2"
      >
        <button
          class="items-center rounded border-0 text-white p-2 flex bg-red-500 hover:bg-red-700 dark:bg-red-500 dark:hover:bg-red-700"
        >
          Delete
        </button>
        <button
          class="items-center rounded border-0 text-black dark:text-white p-2 flex bg-gray-200 hover:bg-gray-300 dark:bg-gray-500 dark:hover:bg-gray-600"
        >
          Edit
        </button>
      </div>
      <p
        class="text-sm italic "
      >
        - 
        name
         at 
        01/01/2022 02:00
      </p>
    </div>
  </li>
</div>
`;

exports[`<ListItem /> when the post is not mine renders 1`] = `
<div>
  <li
    class="flex list-none flex-col border-0 border-solid py-6 last:border-b-0"
  >
    <p
      class="break-words border-0 border-l-2 border-solid border-l-light-primary pl-4 dark:border-l-dark-primary"
    >
      post
    </p>
    <div
      class="flex items-center gap-4 self-end"
    >
      <p
        class="text-sm italic "
      >
        - 
        name
         at 
        01/01/2022 02:00
      </p>
    </div>
  </li>
</div>
`;
